--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <p><em>Student at <strong>Bhagwan Parshuram Institiute of Technology</strong>.</em></p>
         <p>I am Web Developer.I love coffee and brew my own beers.</p>
 <br>
-        <p><strong>"Perfection is achieved not when there is nothimg more to add,but rather when there is nothing more to take away"</strong>-<em>Anotine de Saint-Exupery</em></em></p></p>
+        <p><strong>"Perfection is achieved not when there is nothing more to add,but rather when there is nothing more to take away"</strong>-<em>Anotine de Saint-Exupery</em></em></p></p>
       </td>
     </tr>
   </table>
